# vh-discord-bot

./: .gitignore  pyproject.toml  regenerate.sh
discord_bot/: chatbot.py  constants.py  discoserver.py  settings.py  utils.py
discord_bot/custom_types/: __init__.py
discord_bot/extensions/: channel.py  cog_utils.py  helpers.py  lifecycle.py  players.py  registrar.py  reloader.py  schedule.py  sync.py  utils.py
discord_bot/protos/: disco.proto  empty.proto  val_go.proto  val_py.proto
discord_bot/utils/: embeds.py  guild_utils.py  time_utils.py
proto/: disco.proto
